--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,26 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+body{
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgb(179, 179, 199) 0%,
+     rgba(16,12,12,1) 100% );
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+}
+#container{
+    padding-top: 100px;
+}
+.game-row {
+    display: flex;
+    justify-content: center;
+    font-size: 3em;
 
-*/
+}
+.cell {
+    width: 100px;
+    height: 100px;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin: 3px;
+    padding: 15px;
+    background-color: grey;
+}
